Update generated skills